# nurl

./: Cargo.toml  Dockerfile  readme.md  sql-queries  sqlx-data.json
.sqlx/: query-066b453bddb93895af7f4cdfed42ae100820794d165101cad8187227139d82cc.json  query-195a3a74159f99afa917c7720b3ef3306f55bd952180f5a62b0f72b9a817f782.json  query-9572f2b5ebe3e165a9c083b0c548db57130304b7c19ec651ecd3584aeb3f23f9.json  query-cc1fad9586a5c0ad7382070ead2408d7f7ce26bc3c1c390bdb79a278f3375232.json  query-fda6976e69d0468b2d296d3d14eb736d99f9a956790f0a36830b2239152eadb6.json
configuration/: base.toml  local.toml  production.toml
migrations/: 20230707082432_init.down.sql  20230707082432_init.up.sql
scripts/: init_db.sh
src/: banner.rs  configuration.rs  error_handlers.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/base/: api.rs  mod.rs
src/db/: client.rs
src/nurls/: mod.rs  models.rs  submit_api.rs  view_api.rs
templates/: bad_request.html  banner.html  not_found.html  nurl.html  style.css  submit.html  submit_complete.html
tests/api/: banner.rs  base.rs  helpers.rs  main.rs  nurl_view.rs  submit_complete.rs
tests/db_client/: helpers.rs  main.rs  nurl.rs
