[package]
name = "nurl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "nurl"


[dependencies]
actix-web = "4"
serde = "1.0.115"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
serde-aux = "4"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }
askama = "0.12.0"
thiserror = "1.0.43"
regex = "1.9.3"
lazy_static = "1.4.0"
serde_json = "1.0.105"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]


[dev-dependencies]
once_cell = "1.17.1"

[dev-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]
